Fix banner more-link text and arrow spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3677,10 +3677,12 @@ input, select, textarea {
 			outline: 0;
 			padding-left: 0.225em;
 			position: absolute;
+			display: block;
 			text-align: center;
 			text-transform: uppercase;
 			width: 16em;
 			z-index: 1;
+			padding-top: 1.5em;
 		}
 
 			#banner .more:after {
@@ -3688,7 +3690,7 @@ input, select, textarea {
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: contain;
-				bottom: 4em;
+				bottom: 2em;
 				content: '';
 				display: block;
 				height: 1.5em;
